--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </select>
         <button id="lock">Wanna Lock your answer?</button>
         
-        <button id="Reset" onclick="window.location.reload()">Reset Scores</button>
+        <button id="Reset" onclick="window.location.reload()">Reset</button>
         <br><br>
         <p id="para">Choose an option</p>
 
